2010-04-08 Borut Razem <borut.razem AT siol.net>

	* sdcc-extra/emu/rrz80/disasm.cc: removed comma after the last enum
	  element since SunPro C compiler comlains

2010-04-04 Borut Razem <borut.razem AT siol.net>

	* configure, Makefile.in, configure.in, emu/Makefile.in,
	  emu/rrz80/Makefile.in, emu/rrz80/cpu/Makefile.in,
	  emu/rrgb/Makefile.in, Makefile.rules.in:
	  fixed for Solaris SunPro compiler

2010-02-21 Borut Razem <borut.razem AT siol.net>

	* emu/rrgb/parse_map.c: fixed bug #2956037:
	  rrgb crashes if wrong map file format is supplied

2010-02-09 Borut Razem <borut.razem AT siol.net>
	* emu/rrgb/z80ops.c: enabled opcode 0xfb - instruction ei
	* emu/rrgb/z80.c: report the exact address and value of invalid opcode
	* emu/rrgb/debugger.c: fixed dump command - displaying ASCII values

2008-02-22 Borut Razem <borut.razem AT siol.net>

	* emu/rrgb/main.c: fixed main.c:194: warning: pointer targets in passing
	  argument 3 of 'accept' differ in signedness

2008-02-21 Borut Razem <borut.razem AT siol.net>

	* emu/rrgb/Makefile.in, Makefile.rules.in: added LDFLAGS
	* emu/rrgb/csock.c: include unistd.h id Mac OS X (__APPLE__),
	  fixed csock.c:113: warning: pointer targets in passing argument 3 of
	  'accept' differ in signedness

2006-07-09 Borut Razem <borut.razem AT siol.net>

	* emu/rrgb/debugger.c, emu/rrgb/main.c, emu/rrgb/parse_map.c, emu/rrgb/z80.c:
	  fixed compiler warnings

2006-07-06 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, emu/rrgb/Makefile.in: define STRIP at
	  configure time

2006-07-04 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, Makefile.in, Makefile.rules.in,
	  emu/Makefile.in, emu/rrgb/Makefile.in, emu/rrz80/Makefile.in,
	  emu/rrz80/cpu/Makefile.in: configurable CC, CXX, CPPFLAGS,
	  CFLAGS and CXXFLAGS

2006-07-03 Borut Razem <borut.razem AT siol.net>

	* emu/rrz80/cpu/z80.h: detect __BIG_ENDIAN__ if defined by preprocessor

2006-05-18 Bernhard Held <bernhard AT bernhardheld.de>
